test/expected/explain_dtor.out
explain ~C()
      ^
7: error: destructors not supported in C
